# cdl

./: Cargo.toml  README.md  TODO.md
cdl/: Cargo.toml
cdl-lib/: Cargo.toml
cdl-lib/src/: git.rs  lib.rs  models.rs  url.rs
cdl/src/: cdl.rs  config.rs  main.rs  ui.rs
src/: cdl.rs  config.rs  git.rs  main.rs  models.rs  url.rs
