[package]
name = "cdl-lib"
version = "0.2.0"
authors = ["Pontus Laos <laos.pontus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.2"
async-std = "1.8.0"
git2 = "0.13"
surf = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
