[package]
name = "cdl"
version = "0.2.1"
authors = ["Pontus Laos <laos.pontus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
cdl-lib = { path = "../cdl-lib" }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
toml = "0.5"
